navbar complete for desktop

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kids Education</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body class="quicksand-normal">
+  <body class="quicksand-normal text-normal">
     <header>
-      <nav></nav>
+      <div class="header-context">
+        <nav>
+        <div class="brand">
+            <img src="./assets/logo.png" alt="" class="logo">
+            <h1 class="name">SCHOOL</h1>
+        </div>
+        <div class="menu">
+            <a class="menu-link" href="">Home</a>
+            <a class="menu-link" href="">About</a>
+            <a class="menu-link" href="">Facilities</a>
+            <a class="menu-link" href="">Admission</a>
+        </div>
+        <button class="btn contact-btn">Contact</button>
+      </nav>
       <section id="banar"></section>
+      </div>
     </header>
     <main>
       <section id="standard-curriculum"></section>
