navbar responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -4,25 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kids Education</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="quicksand-normal text-normal">
     <header>
-      <div class="header-context">
+      <div class="header-context container">
         <nav>
-        <div class="brand">
-            <img src="./assets/logo.png" alt="" class="logo">
+          <div class="brand">
+            <img src="./assets/logo.png" alt="" class="logo" />
             <h1 class="name">SCHOOL</h1>
-        </div>
-        <div class="menu">
+          </div>
+          <div class="menu">
             <a class="menu-link" href="">Home</a>
             <a class="menu-link" href="">About</a>
             <a class="menu-link" href="">Facilities</a>
             <a class="menu-link" href="">Admission</a>
-        </div>
-        <button class="btn contact-btn">Contact</button>
-      </nav>
-      <section id="banar"></section>
+          </div>
+          <button class="btn contact-btn">Contact</button>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24px"
+            viewBox="0 -960 960 960"
+            width="24px"
+            fill="#000000"
+            class="menu-icon"
+          >
+            <path
+              d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
+            />
+          </svg>
+        </nav>
+        <section id="banar"></section>
       </div>
     </header>
     <main>
