banar responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -34,7 +34,23 @@
             />
           </svg>
         </nav>
-        <section id="banar"></section>
+        <section id="banar">
+          <div class="banar-intro">
+            <h1 class="title">
+              <p class="title-color-text-1">Empowering</p>
+              <p>students from small</p>
+              <p>age <span class="title-color-text-2">towards vision</span></p>
+            </h1>
+            <p>
+              With the courage, Confidence, Creativity and Compassion to make
+              their Unique Contribution in a Diverse and Dynamic World.
+            </p>
+            <button class="btn enroll-btn">Enroll Now</button>
+          </div>
+          <div class="thumbnail">
+            <img src="./assets/hero-kids.png" class="hero-kid" alt="">
+          </div>
+        </section>
       </div>
     </header>
     <main>
