--- a/index.html
+++ b/index.html
@@ -48,13 +48,74 @@
             <button class="btn enroll-btn">Enroll Now</button>
           </div>
           <div class="thumbnail">
-            <img src="./assets/hero-kids.png" class="hero-kid" alt="">
+            <img src="./assets/hero-kids.png" class="hero-kid" alt="" />
           </div>
         </section>
       </div>
     </header>
     <main>
-      <section id="standard-curriculum"></section>
+      <section id="standard-curriculum">
+        <div class="curriculum-context container">
+          <h2 class="section-title">Standard Curriculum</h2>
+          <div class="curriculums">
+            <div class="curriculum">
+              <img src="./assets/kinder.png" alt="" class="c-img" />
+              <h3 class="card-title">Kinder (3-6) Years</h3>
+              <p class="card-desc">
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <a href="" class="read-more">Read More</a>
+            </div>
+            <div class="curriculum">
+                <img src="./assets/elementary.png" alt="" class="c-img" />
+                <h3 class="card-title">Elementary School</h3>
+                <p class="card-desc">
+                    Cum sociis natoque penatibus et magnis dis parturient montes,
+                    nascetur ridiculus mu sdis parturient
+                </p>
+                <a href="" class="read-more">Read More</a>
+            </div>
+            <div class="curriculum">
+              <img src="./assets/middle.png" alt="" class="c-img" />
+              <h3 class="card-title">Middle (10-16) Years</h3>
+              <p class="card-desc">
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <a href="" class="read-more">Read More</a>
+            </div>
+        </div>
+          <div class="navigation">
+            <div class="left">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="40px"
+                viewBox="0 -960 960 960"
+                width="40px"
+                fill="#FFFFFF"
+              >
+                <path
+                  d="M560.67-240 320-480.67l240.67-240.66L608-674 414.67-480.67 608-287.33 560.67-240Z"
+                />
+              </svg>
+            </div>
+            <div class="right">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="40px"
+                viewBox="0 -960 960 960"
+                width="40px"
+                fill="#FFFFFF"
+              >
+                <path
+                  d="M521.33-480.67 328-674l47.33-47.33L616-480.67 375.33-240 328-287.33l193.33-193.34Z"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
       <section id="our-stories"></section>
     </main>
     <footer></footer>
