story responsive done

--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
               <a href="" class="read-more">Read More</a>
             </div>
             <div class="curriculum">
-                <img src="./assets/elementary.png" alt="" class="c-img" />
-                <h3 class="card-title">Elementary School</h3>
-                <p class="card-desc">
-                    Cum sociis natoque penatibus et magnis dis parturient montes,
-                    nascetur ridiculus mu sdis parturient
-                </p>
-                <a href="" class="read-more">Read More</a>
+              <img src="./assets/elementary.png" alt="" class="c-img" />
+              <h3 class="card-title">Elementary School</h3>
+              <p class="card-desc">
+                Cum sociis natoque penatibus et magnis dis parturient montes,
+                nascetur ridiculus mu sdis parturient
+              </p>
+              <a href="" class="read-more">Read More</a>
             </div>
             <div class="curriculum">
               <img src="./assets/middle.png" alt="" class="c-img" />
@@ -85,7 +85,7 @@
               </p>
               <a href="" class="read-more">Read More</a>
             </div>
-        </div>
+          </div>
           <div class="navigation">
             <div class="left">
               <svg
@@ -116,7 +116,74 @@
           </div>
         </div>
       </section>
-      <section id="our-stories"></section>
+      <section id="our-stories">
+        <div class="story-context container">
+          <h2 class="section-title">Our Stories</h2>
+          <div class="stories">
+            <div class="story">
+              <img src="./assets/story-1.png" alt="" />
+              <div class="story-desc">
+                <div class="story-date">
+                  <p>November 19, 2024</p>
+                </div>
+                <h3 class="card-title">
+                  A fun toddler coloring training on classroom
+                </h3>
+                <p class="card-desc">
+                  Beautiful branding for changes by Never Now in Australia.
+                  changes is a platform for open discussion in an inclusive and
+                  collaborative environment, providing the...
+                </p>
+              </div>
+            </div>
+            <div class="story">
+              <img src="./assets/story-2.png" alt="" />
+              <div class="story-desc">
+                <div class="story-date">
+                  <p>November 19, 2024</p>
+                </div>
+                <h3 class="card-title">
+                  Find out if a school fits the family’s needs
+                </h3>
+              </div>
+            </div>
+            <div class="story">
+              <img src="./assets/story-3.png" alt="" />
+              <div class="story-desc">
+                <div class="story-date">
+                  <p>November 19, 2024</p>
+                </div>
+                <h3 class="card-title">
+                  Summer math & literacy centres for kids
+                </h3>
+              </div>
+            </div>
+            <div class="story">
+              <img src="./assets/story-4.png" alt="" />
+              <div class="story-desc">
+                <div class="story-date">
+                  <p>November 19, 2024</p>
+                </div>
+                <h3 class="card-title">
+                  Conversation rhymes improve kids listening
+                </h3>
+              </div>
+            </div>
+            <div class="story">
+              <img src="./assets/story-5.png" alt="" />
+              <div class="story-desc">
+                <div class="story-date">
+                  <p>November 19, 2024</p>
+                </div>
+                <h3 class="card-title">
+                  Classroom management techniques for new tutors
+                </h3>
+              </div>
+            </div>
+          </div>
+          <button class="btn story-btn">View All</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
