footer responsive done

--- a/index.html
+++ b/index.html
@@ -185,6 +185,44 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-context container">
+        <section id="end-intro">
+          <div class="brand-container">
+            <div class="brand-context">
+              <img src="./assets/footer-logo.png" alt="" />
+              <div class="brand-name">
+                <h1>Kids</h1>
+                <h1>Education</h1>
+              </div>
+            </div>
+            <p>
+              Kids school has colorful classrooms, a big playground, and a library
+              with lots of books. Our teachers are kind and help us grow smarter
+              every day. I love my school because it’s where we learn and play
+              together!
+            </p>
+          </div>
+        </section>
+        <section id="about-school">
+          <h3 class="card-title">About School</h3>
+          <div class="about-menu">
+            <a class="footer-link" href="">Home</a>
+            <a class="footer-link" href="">About</a>
+            <a class="footer-link" href="">Facilities</a>
+            <a class="footer-link" href="">Admission</a>
+          </div>
+        </section>
+        <section id="keep-in-touch">
+          <h3 class="card-title">Keep in Touch</h3>
+          <div class="social-media">
+            <img src="./assets/fb.png" alt="" class="icons" />
+            <img src="./assets/twitter.png" alt="" class="icons" />
+            <img src="./assets/dribble.png" alt="" class="icons" />
+            <img src="./assets/google+.png" alt="" class="icons" />
+          </div>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
