marquee tag implemented

--- a/index.html
+++ b/index.html
@@ -116,6 +116,33 @@
           </div>
         </div>
       </section>
+      <section id="marquee">
+        <div class="marquee-context">
+          <h2 class="section-title">Updates</h2>
+
+          <marquee class="newes" onmouseover="this.stop();" 
+            onmouseout="this.start();" direction="left" scrollamount="10" behavior="scroll" loop="infinite">
+            <div class="newes">
+              <div class="news1">
+                <img src="./assets/dribble.png" alt="" />
+                <h4>Launch Our Brand new Website</h4>
+              </div>
+              <div class="news1">
+                <img src="./assets/elementary.png" alt="" />
+                <h4>1st term result published</h4>
+              </div>
+              <div class="news1">
+                <img src="./assets/kinder.png" alt="" />
+                <h4>School Birth Day Celebration</h4>
+              </div>
+              <div class="news1">
+                <img src="./assets/kinder.png" alt="" />
+                <h4>School Birth Day Celebration</h4>
+              </div>
+            </div>
+          </marquee>
+        </div>
+      </section>
       <section id="our-stories">
         <div class="story-context container">
           <h2 class="section-title">Our Stories</h2>
@@ -197,10 +224,10 @@
               </div>
             </div>
             <p>
-              Kids school has colorful classrooms, a big playground, and a library
-              with lots of books. Our teachers are kind and help us grow smarter
-              every day. I love my school because it’s where we learn and play
-              together!
+              Kids school has colorful classrooms, a big playground, and a
+              library with lots of books. Our teachers are kind and help us grow
+              smarter every day. I love my school because it’s where we learn
+              and play together!
             </p>
           </div>
         </section>
