--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="curriculum-context container">
           <h2 class="section-title">Standard Curriculum</h2>
           <div class="curriculums">
-            <div class="curriculum">
+            <div class="curriculum hover">
               <img src="./assets/kinder.png" alt="" class="c-img" />
               <h3 class="card-title">Kinder (3-6) Years</h3>
               <p class="card-desc">
@@ -67,7 +67,7 @@
               </p>
               <a href="" class="read-more">Read More</a>
             </div>
-            <div class="curriculum">
+            <div class="curriculum hover">
               <img src="./assets/elementary.png" alt="" class="c-img" />
               <h3 class="card-title">Elementary School</h3>
               <p class="card-desc">
@@ -76,7 +76,7 @@
               </p>
               <a href="" class="read-more">Read More</a>
             </div>
-            <div class="curriculum">
+            <div class="curriculum hover">
               <img src="./assets/middle.png" alt="" class="c-img" />
               <h3 class="card-title">Middle (10-16) Years</h3>
               <p class="card-desc">
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="navigation">
-            <div class="left">
+            <div class="left navigation-hover">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="40px"
@@ -100,7 +100,7 @@
                 />
               </svg>
             </div>
-            <div class="right">
+            <div class="right navigation-hover">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 height="40px"
@@ -147,7 +147,7 @@
         <div class="story-context container">
           <h2 class="section-title">Our Stories</h2>
           <div class="stories">
-            <div class="story">
+            <div class="story hover">
               <img src="./assets/story-1.png" alt="" />
               <div class="story-desc">
                 <div class="story-date">
@@ -163,7 +163,7 @@
                 </p>
               </div>
             </div>
-            <div class="story">
+            <div class="story hover">
               <img src="./assets/story-2.png" alt="" />
               <div class="story-desc">
                 <div class="story-date">
@@ -174,7 +174,7 @@
                 </h3>
               </div>
             </div>
-            <div class="story">
+            <div class="story hover">
               <img src="./assets/story-3.png" alt="" />
               <div class="story-desc">
                 <div class="story-date">
@@ -185,7 +185,7 @@
                 </h3>
               </div>
             </div>
-            <div class="story">
+            <div class="story hover">
               <img src="./assets/story-4.png" alt="" />
               <div class="story-desc">
                 <div class="story-date">
@@ -196,7 +196,7 @@
                 </h3>
               </div>
             </div>
-            <div class="story">
+            <div class="story hover">
               <img src="./assets/story-5.png" alt="" />
               <div class="story-desc">
                 <div class="story-date">
